<resources>
    <string name="app_name">CUBIANDROID</string>
    <string name="main_tv">CUBI</string>
    <string name="main_btn">Start</string>
    <string name="filter_off">OFF</string>
    <string name="filter_mono">MONO</string>
    <string name="filter_negative">NEGATIVE</string>
    <string name="filter_solarize">SOLARIZE</string>
    <string name="filter_sepia">SEPIA</string>
    <string name="filter_posterize">POSTERIZE</string>
    <string name="filter_whiteboard">WHITEBOARD</string>
    <string name="filter_blackboard">BLACKBOARD</string>
    <string name="filter_aqua">AQUA</string>
    <string name="mode_travel">TRAVEL</string>
    <string name="mode_event">EVENT</string>
    <string name="mode_live">LIVE</string>
    <string name="mode_daily">DAILY</string>

</resources>
